--- a/app/views/admin/news_letters/_index.html.erb
+++ b/app/views/admin/news_letters/_index.html.erb
@@ -1,4 +1,4 @@
-<table class="admin_items has_border">
+<table class="admin_news_letters has_border">
 	<thead>
 		<tr>
 			<th>ニュースID</th>
@@ -13,7 +13,7 @@
 			<tr>
 				<td class="text-center"><%= news_letter.id %></td>
 				<td><%= link_to item.title, admin_news_letter_path(news_letter), class: "underline" %></td>
-				<td class="text-center"><%= item.text %></td>
+				<td class="text-center"><%= post.text %></td>
 				<td><%= link_to news_letter.genre.name, admin_news_letters_path(genre_id: news_letter.genre_id) %></td>
 				<td>公開ステータス</td>
 			</tr>
