--- a/app/views/admin/news_letters/index.html.erb
+++ b/app/views/admin/news_letters/index.html.erb
@@ -12,7 +12,7 @@
 			<%= render 'admin/news_letters/index', news_letters: @news_letters %>
 			<%= paginate @news_letters %>
 		<% else %>
-			<h3>対応する商品はありませんでした。</h3>
+			<h3>対応するニュースはありませんでした。</h3>
 		<% end %>
 	</div>
 </section>
