--- a/app/views/admin/news_letters/new.html.erb
+++ b/app/views/admin/news_letters/new.html.erb
@@ -1,4 +1,4 @@
 <section class="inner">
-	<h2 class="section-ttl">ニュース新規投稿</h2>
+	<h2 class="section-ttl">ニュース新規追加</h2>
   <%= render 'form', news_letter: @news_letter, url: admin_news_letters_path, submit: '登録' %>
 </section>
