--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -34,3 +34,38 @@
 		</tbody>
 	</table>
 </section>
+
+<section class="wrapper flex">
+	<div class="inner">
+		<h2 class="section-ttl">投稿一覧 (全<%= @all_posts_count %>件)</h2>
+		<table class="posts has_border">
+			<thead>
+				<tr>
+					<th>投稿ID</th>
+			        <th>タイトル</th>
+			        <th>本文</th>
+			        <th>画像</th>
+			        <th>投稿ステータス</th>
+		        </tr>
+	        </thead>
+	    <tbody>
+		<% @posts.each do |post| %>
+		<tr>
+			<td class="text-center"><%= post.id %></td>
+			<td><%= link_to post.title, post_path(post), class: "underline" %></td>
+			<td class="text-center"><%= post.text %></td>
+			<td><%= image_tag post.image, size:'300x200' %></td>
+			<td>公開ステータス</td>
+					<% if post.is_draft == true %>
+					<td>下書き</td>
+					<% else %>
+					<td>公開中</td>
+					<% end %>
+					<td></td>
+		</tr>
+		<% end %>
+	    </tbody>
+        </table>
+	</div>
+</section>
+
