--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,19 +1,20 @@
 <table class="posts has_border">
 	<thead>
 		<tr>
-			<th>投稿ID</th>
+			<th>ニックネーム</th>
 			<th>タイトル</th>
 			<th>本文</th>
-			<th>公開ステータス</th>
+			<th>画像</th>
 		</tr>
 	</thead>
 	<tbody>
 		<% posts.each do |post| %>
 			<tr>
-				<td class="text-center"><%= post.id %></td>
+				<td class="text-center"><%= post.nickname %></td>
 				<td><%= link_to post.title, post_path(post), class: "underline" %></td>
 				<td class="text-center"><%= post.text %></td>
-				<td>公開ステータス</td>
+				<td class="text-center"><%= image_tag post.get_image, size:'300x200' %></td>
+				
 			</tr>
 		<% end %>
 	</tbody>
