--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,4 +1,41 @@
-<section class="inner">
-	<h2 class="section-ttl"><%= @post.name %>の編集</h2>
-  <%= render 'form', post: @post, url: admin_post_path(@post), submit: '更新' %>
-</section>
+<%= form_with model:@post do |f| %>
+	<%#= render 'layouts/error_messages', resource: post %>
+	<div class="flex">
+		<div>
+			<div class="image_field">
+				<tr>
+				  <td><%= f.label :画像 %></td>
+                  <td><%= f.file_field :image,accept: "image/*" %></td>
+				</tr>
+			</div>
+		</div>
+		<table class="post_info post_form">
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= f.label :title, "タイトル" %></td>
+					<td><%= f.text_field :title %></td>
+				</tr>
+				<tr>
+					<td><%= f.label :text, "本文" %></td>
+					<td><%= f.text_area :text, rows: 3 %></td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="flex align-center pl5">
+		  <% if @post.is_draft == true %>
+            <%= f.submit "投稿を公開", :name => 'publicize_draft', class:'mr-5 btn btn-sm btn-warning' %>
+            <%= f.submit "下書きを更新", :name => 'update_draft', class:'mr-5 btn btn-sm btn-outline-secondary' %>
+          <% else %>
+            <%= f.submit "投稿を更新", :name => 'update_post', class:'btn btn-sm btn-warning text-light' %>
+          <% end %>
+        </div>
+        <div class="mt-4 pb-3 text-center">
+          <u><%= link_to "投稿を削除", "/post_recipes/#{@post.id}", method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'text-danger' %></u>
+        </div>
+<% end %>
