--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,4 +1,35 @@
-<section class="inner">
-	<h2 class="section-ttl">投稿新規追加</h2>
-  <%= render 'form', post: @post, url: admin_posts_path, submit: '登録' %>
-</section>
+<%= form_with model:@post do |f| %>
+	<%#= render 'layouts/error_messages', resource: post %>
+	<div class="flex">
+		<div>
+			<div class="image_field">
+				<tr>
+				  <td><%= f.label :画像 %></td>
+                  <td><%= f.file_field :image,accept: "image/*" %></td>
+				</tr>
+			</div>
+		</div>
+		<table class="post_info post_form">
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= f.label :title, "タイトル" %></td>
+					<td><%= f.text_field :title %></td>
+				</tr>
+				<tr>
+					<td><%= f.label :text, "本文" %></td>
+					<td><%= f.text_area :text, rows: 3 %></td>
+				</tr>
+				<%= f.hidden_field :nickname, :value => @customer.nickname %>
+			</tbody>
+		</table>
+		<div class="flex align-center pl5">
+		  <%= f.submit '投稿を公開', :name => 'publicize_draft', class: 'mr-5 btn btn-sm btn-warning text-white' %>
+     　　 <%= f.submit '下書きに保存', :name => 'draft', class: 'mr-5 btn btn-sm btn-outline-secondary' %>
+        </div>
+<% end %>
