--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -6,9 +6,16 @@
 				<tr>
 					<th></th>	
 					<th></th>
+					<th></th>
+					<th></th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
+				<tr>
+					<td>ニックネーム</td>
+					<td><%= @post.nickname %></td>
+				</tr>
 				<tr>
 					<td>タイトル</td>
 					<td><%= @post.title %></td>
@@ -17,11 +24,23 @@
 					<td>本文</td>
 					<td><%= @post.text %></td>
 				</tr>
+				<!--<tr>-->
+				<!--	<td>画像</td>-->
+				<!--	<td><%#= image_tag @post.image, size:'300x200' %></td>-->
+				<!--</tr>-->
+				<tr>
+					<td>公開ステータス</td>
+					<% if @post.is_draft == true %>
+					<td>下書き</td>
+					<% else %>
+					<td>公開中</td>
+					<% end %>
+				</tr>
 			</tbody>
 		</table>
 		<div>
 			<div class="image_field">
-				<%= image_tag @post.get_image, id: "img_prev", class: "admin_post_image" %>
+				<%= image_tag @post.get_image, size:'300x200', id: "img_prev", class: "admin_post_image" %>
 			</div>
 		</div>
 		<div class="flex align-center pl5">
