いいね機能まで追加

--- a/app/views/admin/news_letters/_index.html.erb
+++ b/app/views/admin/news_letters/_index.html.erb
@@ -1,22 +1,24 @@
-<table class="admin_news_letters has_border">
-	<thead>
-		<tr>
-			<th>ニュースID</th>
-			<th>タイトル</th>
-			<th>本文</th>
-			<th>ジャンル</th>
-			<th>公開ステータス</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% news_letters.each do |item| %>
-			<tr>
-				<td class="text-center"><%= news_letter.id %></td>
-				<td><%= link_to item.title, admin_news_letter_path(news_letter), class: "underline" %></td>
-				<td class="text-center"><%= post.text %></td>
-				<td><%= link_to news_letter.genre.name, admin_news_letters_path(genre_id: news_letter.genre_id) %></td>
-				<td>公開ステータス</td>
-			</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="row">
+  	<div class="col-1">
+  	</div>
+  	<div class="col-8 mt-3">
+  	  <table class="table">
+  	  <thead>
+  	  	<tr>
+  	  		<th style="background-color: #F2F2F2;">タイトル</th>
+  	  		<th style="background-color: #F2F2F2;">本文</th>
+  	  		<th style="background-color: #F2F2F2;">画像</th>
+  	  	</tr>
+  	  </thead>
+  	  <tbody>
+  	   <% news_letters.each do |admin_news_letter| %>
+  	     <tr>
+  	     	<td align="center"><%= link_to news_letter.news_title, admin_news_letter_path(news_letter), class: "underline" %></td>
+  	     	<td align="center"><%= news_letter.news_text %></td>
+  	     	<td align="center"><%= image_tag news_letter.image, size:'300x200' %></td>
+  	     </tr>
+  	   <% end %>
+  	  </tbody>
+  	</table>
+  </div>
+ </div>
