--- a/app/views/admin/news_letters/index.html.erb
+++ b/app/views/admin/news_letters/index.html.erb
@@ -6,11 +6,13 @@
 			<h2 class="section-ttl">ニュース一覧 (全<%= @all_news_letters_count %>件)</h2>
 		<% end %>
 		<h3 class="text-right">
-			<%= link_to "+", new_admin_news_letter_path, class: "new_admin_news_letter" %>
-		</h3>
+			<%= link_to new_admin_news_letter_path do %>
+        <button type="button" class="btn btn-light rounded-circle p-0" style="width:2rem;height:2rem;">＋</button>
+        <% end %>
+        </h3>
 		<% if @news_letters.first %> <!-- @item.existsと同義、SQL1個分削減(?) -->
 			<%= render 'admin/news_letters/index', news_letters: @news_letters %>
-			<%= paginate @news_letters %>
+			<%#= paginate @news_letters %>
 		<% else %>
 			<h3>対応するニュースはありませんでした。</h3>
 		<% end %>
