--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,5 +1,5 @@
 <section class="inner">
 	<h2 class="section-ttl">会員一覧</h2>
 	<%= render 'index', customers: @customers %>
-	<%= paginate @customers %>
+	<%#= paginate @customers %>
 </section>
