--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,34 +1,41 @@
-<section class="inner">
-	<h2 class="section-ttl">ジャンル管理</h2>
-	<div class="mb3">
-		<h3>ジャンル新規登録</h3>
-  	<%= render 'form', genre: @genre, url: admin_genres_path, submit: '登録' %>
-	</div>
-	<div class="mb3">
-		<h3>ジャンル一覧</h3>
-		<table class="genre_info has_border">
-			<thead>
-				<tr>
-					<th>ジャンル名</th>
-					<th>状態</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @genres.each do |genre| %>
-					<tr>
-						<td><%= link_to genre.name, admin_items_path(genre_id: genre.id), class: "underline" %></td>
-						<td>
-							<% if genre.is_active? %>
-								<span class="text-active">有効</span>
-							<% else %>
-								<span class="text-invalid">無効</span>
-							<% end %>
-						</td>
-						<td class="text-center"><%= link_to "編集", edit_admin_genre_path(genre), class: "btn btn-success" %></td>
-					</tr>
-				<% end %>
-			</tbody>
-		</table>
-	</div>
-</section>
+<div class="container px-5 px-sm-0">
+  <h3>ジャンル一覧・追加</h3>
+  <div class="row mt-3">
+      <div class="col-md-5">
+<!-- ジャンル新規登録フォーム -->
+       <%= form_with model: Genre.new,url: admin_genres_path do |f| %>
+          <table class="table table-borderless">
+            <thead>
+              <tr>
+                <td>ジャンル名</td>
+                <td><%= f.text_field :name %></td>
+                <td><%= f.submit '新規登録', class:'btn btn-success' %></td>
+              </tr>
+            </thead>
+          </table>
+       <% end %>
+      </div>
+  </div>
+<!--ジャンル一覧-->
+  <div class="row mt-3">
+    <div class="col-md-5">
+      <table class="table table-inverse">
+        <thead>
+          <tr>
+            <th class="pl-5">ジャンル名</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td><%= link_to edit_admin_genre_path(genre), class:"btn btn-success" do %>  編集する  </td>
+            </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
