--- a/app/views/admin/news_letters/new.html.erb
+++ b/app/views/admin/news_letters/new.html.erb
@@ -1,4 +1,42 @@
-<section class="inner">
-	<h2 class="section-ttl">ニュース新規追加</h2>
-  <%= render 'form', news_letter: @news_letter, url: admin_news_letters_path, submit: '登録' %>
-</section>
+<%= form_with model: @news_letter, url: admin_news_letters_path do |f| %>
+	<%#= render 'layouts/error_messages', resource: post %>
+	<div class="flex">
+		<div>
+			<div class="image_field">
+				<tr>
+				  <td><%= f.label :画像 %></td>
+                  <td><%= f.file_field :image,accept: "image/*" %></td>
+				</tr>
+			</div>
+		</div>
+		<table class="post_info post_form">
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= f.label :news_title, "タイトル" %></td>
+					<td><%= f.text_field :news_title %></td>
+				</tr>
+				<tr>
+					<td><%= f.label :news_text, "本文" %></td>
+					<td><%= f.text_area :news_text, rows: 3 %></td>
+				</tr>
+				<tr>
+					<td><%= f.label :genre, "ジャンル" %></td>
+					<td>
+					  <div class="form-group custom-dropdown">
+               　　　　<%= f.select :genre_id, options_for_select(@genres.map { |genre| [genre.name, genre.id] }), include_blank: "-- 選択してください--", style: "width: 250px;" %>
+             　　　　　　</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="flex align-center pl5">
+		  <%= f.submit '投稿を公開', :name => 'publicize_draft', class: 'mr-5 btn btn-sm btn-warning text-white' %>
+     　　 <%= f.submit '下書きに保存', :name => 'draft', class: 'mr-5 btn btn-sm btn-outline-secondary' %>
+        </div>
+<% end %>
