--- a/app/views/admin/news_letters/show.html.erb
+++ b/app/views/admin/news_letters/show.html.erb
@@ -1,14 +1,57 @@
+<!--<section class="inner">-->
+<!--	<h2 class="section-ttl">ニュース詳細</h2>-->
+<!--	<div class="flex">-->
+<!--		<table class="admin_news_letter_info">-->
+<!--			<thead>-->
+<!--				<tr>-->
+<!--					<th></th>	-->
+<!--					<th></th>-->
+<!--				</tr>-->
+<!--			</thead>-->
+<!--			<tbody>-->
+<!--				<tr>-->
+<!--					<td>タイトル</td>-->
+<!--					<td><%#= @news_letter.news_title %></td>-->
+<!--				</tr>-->
+<!--				<tr>-->
+<!--					<td>本文</td>-->
+<!--					<td><%#= @news_letter.news_text %></td>-->
+<!--				</tr>-->
+<!--				<tr>-->
+<!--					<td>ジャンル</td>-->
+<!--					<td><%#= link_to @news_letter.genre.name, admin_news_letters_path(genre_id: @item.genre_id), class: "underline" %></td>-->
+<!--				</tr>-->
+<!--			</tbody>-->
+<!--		</table>-->
+<!--		<div>-->
+<!--			<div class="image_field">-->
+<!--				<%#= image_tag @news_letter.get_image, id: "img_prev", class: "admin_item_image" %>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--		<div class="flex align-center pl5">-->
+<!--			<%#= link_to "編集する", edit_admin_news_letter_path(@news_letter), class: "btn btn-success" %>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
+
 <section class="inner">
 	<h2 class="section-ttl">ニュース詳細</h2>
 	<div class="flex">
-		<table class="admin_news_letter_info">
+		<table class="news_letter_info">
 			<thead>
 				<tr>
 					<th></th>	
 					<th></th>
+					<th></th>
+					<th></th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
+				<tr>
+					<td>ジャンル</td>
+					<td><%= link_to @news_letter.genre.name, admin_news_letters_path(genre_id: @item.genre_id), class: "underline" %></td>
+				</tr>
 				<tr>
 					<td>タイトル</td>
 					<td><%= @news_letter.news_title %></td>
@@ -18,14 +61,18 @@
 					<td><%= @news_letter.news_text %></td>
 				</tr>
 				<tr>
-					<td>ジャンル</td>
-					<td><%= link_to @news_letter.genre.name, admin_news_letters_path(genre_id: @item.genre_id), class: "underline" %></td>
+					<td>公開ステータス</td>
+					<% if @news_letter.is_draft == true %>
+					<td>下書き</td>
+					<% else %>
+					<td>公開中</td>
+					<% end %>
 				</tr>
 			</tbody>
 		</table>
 		<div>
 			<div class="image_field">
-				<%= image_tag @news_letter.get_image, id: "img_prev", class: "admin_item_image" %>
+				<%= image_tag @news_letter.get_image, size:'300x200', id: "img_prev", class: "admin_post_image" %>
 			</div>
 		</div>
 		<div class="flex align-center pl5">
