--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -36,6 +36,6 @@
           <% end %>
         </div>
         <div class="mt-4 pb-3 text-center">
-          <u><%= link_to "投稿を削除", "/post_recipes/#{@post.id}", method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'text-danger' %></u>
+          <u><%= link_to "投稿を削除", post_path(@post.id), method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'text-danger' %></u>
         </div>
 <% end %>
