--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,6 +1,6 @@
 <section class="wrapper flex">
 	<div class="inner">
-		<h2 class="section-ttl">投稿一覧 (全<%= @all_posts_count %>件)</h2>
+		<h2 class="section-ttl">投稿一覧</h2>
 		<h3 class="text-right">
 			<%= link_to new_post_path do %>
         <button type="button" class="btn btn-light rounded-circle p-0" style="width:2rem;height:2rem;">＋</button>
