--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -25,6 +25,14 @@
 					<td><%= f.label :text, "本文" %></td>
 					<td><%= f.text_area :text, rows: 3 %></td>
 				</tr>
+				<tr>
+					<td>
+            <div class="form-group form-group_tags">
+            <%= f.label :tag_list, "Tag", class: "form-label" %>
+            <%= f.text_field :tag_list, value: @post.tag_list.join(","), class: "form-control", data: { role: "tagsinput" } %>
+            </div>
+					</td>
+				</tr>
 			</tbody>
 		</table>
 		<div class="flex align-center pl5">
