--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -14,6 +14,7 @@
 				<tr>
 					<th></th>
 					<th></th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -24,6 +25,14 @@
 				<tr>
 					<td><%= f.label :text, "本文" %></td>
 					<td><%= f.text_area :text, rows: 3 %></td>
+				</tr>
+				<tr>
+					<td>
+					  <div class="form-group form-group_tags">
+                      <%= f.label :tag_list, "Tag", class: "form-label" %>
+                      <%= f.text_field :tag_list, value: @post.tag_list.join(","), class: "form-control", data: { role: "tagsinput" } %>
+                      </div>
+					</td>
 				</tr>
 				<%= f.hidden_field :nickname, :value => @customer.nickname %>
 			</tbody>
