--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -32,6 +32,23 @@
 					<td>公開中</td>
 					<% end %>
 				</tr>
+				<tr>
+					<td>
+					  <div class="tags">
+                      <% if @tags.present? %>
+                      <div class="d-flex flex-wrap">
+                      <% @tags.each do |tag| %>
+	                  <span class="badge badge-info mr-2 mb-2">
+	                  <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "text-white" %>
+	                  </span>
+                      <% end %>
+                      </div>
+                      <% else %>
+                      <p>登録されているタグはありません</p>
+                      <% end %>
+                      </div>	
+					</td>
+				</tr>
 			</tbody>
 		</table>
 		<div>
