--- a/app/views/layouts/_header_customer.html.erb
+++ b/app/views/layouts/_header_customer.html.erb
@@ -15,6 +15,11 @@
             <% end %>
           </li>
           <li>
+            <%= link_to customers_path, class: 'nav-link text-dark' do %>
+            会員一覧
+            <% end %>
+          </li>
+          <li>
             <%= link_to posts_path, class: 'nav-link text-dark' do %>
             投稿一覧
           　<% end %>
