--- a/app/views/public/tags/show.html.erb
+++ b/app/views/public/tags/show.html.erb
@@ -6,14 +6,16 @@
       <div class="row mt-3">
         <% @tagged_posts = @tagged_posts.order(impressions_count: :desc) %>
         <% @tagged_posts.each do |post| %>
-          <%= render partial: 'public/shared/post_item', locals: { post: post } %>
+          <%# byebug %>
+          <%#= render partial: 'public/posts/index', locals: { posts: post } %>
+          <%= render partial: 'public/posts/index', locals: { posts: @tagged_posts } %>
         <% end %>
       </div>
     　　  <% else %>
         <h1 class="tags-title">Tag not found</h1>
         <% end %>
       <div class="pagination justify-content-center">
-       <%= paginate @tagged_posts, theme: 'bootstrap-5' %>
+       <%#= paginate @tagged_posts, theme: 'bootstrap-5' %>
       </div>
     </div>
   </div>
