通報機能追加

--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -31,6 +31,7 @@
             ログアウト
             <% end %>
           </li>
+           <%= render "admin/searches/form" %>
         </ul>
       </div>
     </div>
