--- a/app/views/layouts/_header_logout.html.erb
+++ b/app/views/layouts/_header_logout.html.erb
@@ -12,6 +12,16 @@
           　<% end %>
           </li>
           <li>
+            <%= link_to posts_path, class: 'nav-link text-dark' do %>
+            投稿一覧
+          　<% end %>
+          </li>
+          <li>
+            <%= link_to news_letters_path, class: 'nav-link text-dark' do %>
+            ニュース一覧
+          　<% end %>
+          </li>
+          <li>
             <%= link_to new_customer_registration_path, class: 'nav-link text-dark' do %>
             新規登録
           　<% end %>
