--- a/app/views/layouts/_header_customer.html.erb
+++ b/app/views/layouts/_header_customer.html.erb
@@ -30,6 +30,11 @@
           　<% end %>
           </li>
           <li>
+            <%= link_to liked_posts_customer_path(current_customer), class: 'nav-link text-dark' do %>
+            いいね一覧
+          　<% end %>
+          </li>
+          <li>
             <%= link_to destroy_customer_session_path, class: 'nav-link text-dark', method: :delete do %>
             ログアウト
           　<% end %>
