--- a/app/views/layouts/_header_logout.html.erb
+++ b/app/views/layouts/_header_logout.html.erb
@@ -31,6 +31,11 @@
             ログイン
           　<% end %>
           </li>
+          <li>
+            <%= link_to customers_guest_sign_in_path, class: 'nav-link text-dark' do %>
+            ゲストログイン
+          　<% end %>
+          </li>
         </ul>
       </div>
       </div>
