レイアウト

--- a/app/views/admin/news_letters/edit.html.erb
+++ b/app/views/admin/news_letters/edit.html.erb
@@ -36,6 +36,6 @@
           <% end %>
         </div>
         <div class="mt-4 pb-3 text-center">
-          <u><%= link_to "投稿を削除", news_letter_path(@news_letter.id), method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'text-danger' %></u>
+          <u><%= link_to "投稿を削除", news_letter_path(@news_letter.id), method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'btn btn-danger' %></u>
         </div>
 <% end %>
