--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,4 +1,4 @@
-<section class="inner">
+<div class="container">
 	<h2 class="section-ttl"><%= @customer.full_name %>さんのページ</h2>
 	<table class="customer_info">
 		<thead>
@@ -38,7 +38,9 @@
 			<tr>
 				<td><%= link_to "編集", edit_admin_customer_path(@customer), class: "btn btn-success" %></td>
 			</tr>
+			<tr>
+				<td><%= link_to "削除", admin_customer_path(@customer.id), method: :delete, data: {confirm: "このユーザーを削除しますか？"}, class:'btn btn-danger' %></td>
+			</tr>
 		</tbody>
 	</table>
-	
-</section>
+</div>
