--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -28,6 +28,6 @@
 			</tbody>
 		</table>
         <div class="mt-4 pb-3 text-center">
-          <u><%= link_to "投稿を削除", admin_post_path(@post.id), method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'text-danger' %></u>
+          <u><%= link_to "投稿を削除", admin_post_path(@post.id), method: :delete, data: {confirm: "この投稿を削除しますか？"}, class:'btn btn-danger' %></u>
         </div>
 <% end %>
