--- a/app/views/public/customers/index.html.erb
+++ b/app/views/public/customers/index.html.erb
@@ -1,5 +1,5 @@
-<section class="inner">
+<div class="container">
 	<h2 class="section-ttl">ユーザー一覧</h2>
 	<%= render 'index', customers: @customers %>
 	<%#= paginate @customers %>
-</section>
+</div>
