--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -36,6 +36,10 @@
 				</td>
 			</tr>
 			<tr>
+				<td>コメント</td>
+				<td><%= @reported_count %></td>
+			</tr>
+			<tr>
 				<td><%= link_to "編集", edit_admin_customer_path(@customer), class: "btn btn-success" %></td>
 			</tr>
 			<tr>
