--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,7 @@
-<h1>About</h1>
+<div class="container">
+<h1>本アプリケーションの使い方</h1><br>
+<br>
+<h4>お手数ですが、投稿の際は「病名」か「○○（病名）の子の家族」という形式で、</h4><br>
+<h4>タグ付けをお願いいたします。</h4><br>
+<h4>例：先天性胆道閉鎖症、先天性胆道閉鎖症の子の家族</h4>
+</div>
