--- a/app/views/admin/customers/liked_posts.html.erb
+++ b/app/views/admin/customers/liked_posts.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <h4 class="headline mt-5 ml-5">いいねした投稿</h4>
         <div class="row mt-3">
-        <% @liked_posts.each do |post| %>
+        <% @favorite_posts.each do |post| %>
           <%= render 'public/posts/index', post: post %>
         <% end %>
       </div>
