--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,5 +3,5 @@
 <h4>当アプリケーションは、幼少期から病気を抱えながらも社会生活を送っている方や</h4><br>
 <h4>その親御さん向けのコミュニティサイトとなります。</h4><br>
 <h4>会員登録後にサービスをお楽しみいただけますので、お気軽にご登録ください。</h4><br>
-<h4>※日常用のコミュニティサイトであるため、医療行為やその効果効能に関する記載はお控えいただいております。</h4
+<h4>※日常用のコミュニティサイトであるため、医療行為やその効果効能に関する記載はお控えいただいております。</h4>
 </div>
