--- a/app/views/admin/news_letters/new.html.erb
+++ b/app/views/admin/news_letters/new.html.erb
@@ -37,6 +37,6 @@
 		</table>
 		<div class="flex align-center pl5">
 		  <%= f.submit '投稿を公開', :name => 'publicize_draft', class: 'mr-5 btn btn-sm btn-warning text-white' %>
-     　　 <%= f.submit '下書きに保存', :name => 'draft', class: 'mr-5 btn btn-sm btn-outline-secondary' %>
+     　　 <!--<%#= f.submit '下書きに保存', :name => 'draft', class: 'mr-5 btn btn-sm btn-outline-secondary' %>-->
         </div>
 <% end %>
