顧客詳細微調整

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -13,13 +13,13 @@
 			</tr>
 			<tr>
 				<td>名前</td>
-				<td>(姓) <%= @customer.first_name %></td>
-				<td>(名) <%= @customer.last_name %></td>
+				<td>(姓) <%= @customer.last_name %></td>
+				<td>(名) <%= @customer.first_name %></td>
 			</tr>
 			<tr>
 				<td>フリガナ</td>
-				<td>(セイ) <%= @customer.first_name_kana %></td>
-				<td>(メイ) <%= @customer.last_name_kana %></td>
+				<td>(セイ) <%= @customer.last_name_kana %></td>
+				<td>(メイ) <%= @customer.first_name_kana %></td>
 			</tr>
 			<tr>
 				<td>メールアドレス</td>
