--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -11,13 +11,13 @@
 			<tbody>
 				<tr>
 					<td>名前</td>
-					<td><%= f.label :first_name, "(姓)", class: "customer_name" %> <%= f.text_field :first_name, :placeholder =>"#{@customer.first_name}" %></td>
-					<td><%= f.label :last_name, "(名)", class: "customer_name" %> <%= f.text_field :last_name, :placeholder =>"#{@customer.last_name}" %></td>
+					<td><%= f.label :first_name, "(姓)", class: "customer_name" %> <%= f.text_field :last_name, :placeholder =>"#{@customer.first_name}" %></td>
+					<td><%= f.label :last_name, "(名)", class: "customer_name" %> <%= f.text_field :first_name, :placeholder =>"#{@customer.last_name}" %></td>
 				</tr>
 				<tr>
 					<td>フリガナ</td>
-					<td><%= f.label :first_name_kana, "(セイ)" %> <%= f.text_field :first_name_kana, :placeholder =>"#{@customer.first_name_kana}" %></td>
-					<td><%= f.label :last_name_kana, "(メイ)" %> <%= f.text_field :last_name_kana, :placeholder =>"#{@customer.last_name_kana}" %></td>
+					<td><%= f.label :first_name_kana, "(セイ)" %> <%= f.text_field :last_name_kana, :placeholder =>"#{@customer.first_name_kana}" %></td>
+					<td><%= f.label :last_name_kana, "(メイ)" %> <%= f.text_field :first_name_kana, :placeholder =>"#{@customer.last_name_kana}" %></td>
 				</tr>
 				<tr>
 					<td>ニックネーム</td>
