--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -33,7 +33,10 @@
 		</table>
 		<div>
 			<div class="image_field">
-				<%= image_tag @post.get_image, size:'300x200', id: "img_prev", class: "admin_post_image" %>
+				<%= image_tag @post.get_image, size:'300x200', id: "img_prev", class: "admin_post_image" %><br>
+				<% @post.vision_api_tags.each do |vision_api_tag| %>
+				<span class="label"><%= vision_api_tag.name %></span>
+				<% end %>
 			</div>
 		</div>
 		<div class="flex align-center pl5">
