tag page update

--- a/app/views/public/tags/show.html.erb
+++ b/app/views/public/tags/show.html.erb
@@ -2,7 +2,7 @@
     <div class="col-md-12">
       <% if @tagged_posts.present? %>
       <h4 class="headline mt-5 ml-5">Tag: <%= @tag.name %>の一覧（<%= @total_posts_count %>件）</h4>
-        <% @tagged_posts = @tagged_posts.order(impressions_count: :desc) %>
+        <%# @tagged_posts = @tagged_posts.order(impressions_count: :desc) %>
         
           <%# byebug %>
           <%#= render partial: 'public/posts/index', locals: { posts: post } %>
