--- a/app/views/layouts/_header_logout.html.erb
+++ b/app/views/layouts/_header_logout.html.erb
@@ -12,7 +12,7 @@
           　<% end %>
           </li>
           <li>
-            <%= link_to posts_path, class: 'nav-link text-dark' do %>
+            <%= link_to new_customer_session_path, class: 'nav-link text-dark' do %>
             投稿一覧
           　<% end %>
           </li>
